--- a/index.html
+++ b/index.html
@@ -10,54 +10,81 @@
 <body>
     <header class="navbar">
         <div class="headercontainer">
-            <div class="logo">Logo</div>
+            <div class="logo">
+                <img src="logo.png" alt="logo">
+            </div>
             <menu class="menuheader">
                 <div class="menuitems">
-                    <a href="#" class="active">Home</a>
-                    <a href="#choix2">Choix2</a>
+                    <a href="#home" class="active">Home</a>
+                    <a href="#game">Game</a>
                     <a href="#choix3">Choix3</a>
                     <a href="#choix4">Choix4</a>
                 </div>
             </menu>
             <div class="social">
-                <a href="#">Reseau1</a>
-                <a href="#">Reseau2</a>
-                <a href="#">Reseau3</a>
+                <a href="#">Facebook</a>
+                <a href="#">Twitter</a>
+                <a href="#">Github</a>
             </div>
         </div>
     </header>
-    <div class="firstScreen">
+    <div class="container">
         <div class="firstContainer">
-            <div class="firstScreenSlider">
-                <div class="slick-list">
+            <div class="leftContainer">
                     <div class="listleft">
-                        <h2 class="title">Le titre de notre NFT</h2>
+                        <h1 class="title">Conquistos</h1>
+                        <h2>Le jeu RP medieval qui vous fait gagner des Ether !</h2>
                     </div>
-                    <div class="listright">
-                        <p class="picture">Picture or Video</p>
-                    </div>
+            </div>  
+            <div class="rightContainer">
+                <div class="listright">
+                   <!-- <img src="img.png" alt="zelda"> -->
                 </div>
             </div>
         </div>
     </div>
-    <section>
-        <div class="gauche">
-            <h1>Titre</h1>
-            <h2>Slogan</h2>
+    <div class="container2">
+        <div class="secondContainer">
+            <div class="leftContainer2">
+                    <div class="listleft2">
+                        <!-- <img src="img.png" alt="zelda"> -->
+                    </div>
+            </div>  
+            <div class="rightContainer2">
+                <div class="listright2">
+                    <h1 class="title">Conquistos</h1>
+                    <h2>Le jeu RP medieval qui vous fait gagner des Ether !</h2>
+                </div>
+            </div>
         </div>
-        <div class="droite">
-            <p>image de notre NFT</p>
-            <h1>Titre du p</h1>
-            <p>paragraphe</p>
-            <h1>Titre du p2</h1>
-            <p>paragraphe</p>
-        </div>
-    </section>
+    </div>
     <footer>
-            <p>mentions légales</p>
-            <p>Partenaires</p>
-            <p>Nous contacter</p>
-            <p>Nos sponsors</p>
+    <div class="row">
+        <div class="column">
+            <h2>Services</h2>
+            <ul>
+                <li>Web Design</li>
+                <li>Development</li>
+                <li>Hosting</li>
+            </ul>
+        </div>
+        <div class="column">
+            <h2>About</h2>
+            <ul>
+                <li>Company</li>
+                <li>Teams</li>
+                <li>Careers</li>
+            </ul>
+        </div>
+        <div class="column">
+            <h2>Contact</h2>
+            <ul>
+                <li>Mentions Légales</li>
+                <li>Nous contacter</li>
+                <li>Sponsors</li>
+            </ul>
+        </div>
+    </div>
     </footer>
 </body>
 </html>
