:zap: repository data done

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header class="navbar">
         <div class="headercontainer">
             <div class="logo">
-                <img src="logo.png" alt="logo">
+                <img src="/assets/logo.png" alt="logo">
             </div>
             <menu class="menuheader">
                 <div class="menuitems">
@@ -25,9 +25,9 @@
                 </div>
             </menu>
             <div class="social">
-                <a href="#"><img src="./instagram.png" alt=""></a>
-                <a href="#"><img src="./facebook.png" alt=""></a>
-                <a href="#"><img src="./twitter.png" alt=""></a>
+                <a href="#"><img src="/assets/instagram.png" alt=""></a>
+                <a href="#"><img src="/assets/facebook.png" alt=""></a>
+                <a href="#"><img src="/assets/twitter.png" alt=""></a>
             </div>
         </div>
     </header>
@@ -43,7 +43,7 @@
             <div class="rightContainer">
                 <div class="listright">
                     <h1 class="title">Conquistos</h1>
-                    <img src="img2.png" alt="zelda">
+                    <img src="/assets/img2.png" alt="zelda">
                 </div>
             </div>
         </div>
@@ -55,7 +55,7 @@
                 <div class="listleft">
                     <h1 class="title">Conquistos</h1>
 
-                    <img src="img1.png" alt="zelda">
+                    <img src="/assets/img1.png" alt="zelda">
                 </div>
             </div>  
             <div class="rightContainer">
